--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
+    "3d-react-carousal": "^5.0.0",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.3",
     "moment": "^2.29.1",
